--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ before_install:
 #These two steps will effectively validate our terraform and output a list of any changes to be made to our infrastructure
 script:
   - ./terraform init
-  - ./terraform plan
+ 
 
 deploy:
 #Roll out any terraform changes required
 - provider: script
   script: 
-    - ./terraform apply
+    - ./terraform init
   skip_cleanup: true
   on:
     branch: master
